Finished the login and user creation methods

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -4,5 +4,6 @@
   "database": "bluetols_v2",
   "host": "127.0.0.1",
   "dialect": "mysql",
-  "appPort": 3333
+  "appPort": 3333,
+  "SECRET": "d501056a6cc32bd85f67e66591cbdf96"
 }
