--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bluetools_backend",
+  "name": "bluetools_backend",
   "version": "0.1.0",
   "description": "Backend da aplicaçao bluetools",
   "main": "index.js",
@@ -7,14 +7,19 @@
   "author": "Rainan Miranda de Jesus<jesus.rainan@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
+    "sequelize": "^6.3.3"
+  },
+  "devDependencies": {
+    "jest": "^26.4.0",
     "nodemon": "^2.0.4",
-    "sequelize": "^6.3.3",
     "sequelize-cli": "^6.2.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
