--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,14 @@
 	"devDependencies": {
 		"jest": "^26.4.0",
 		"nodemon": "^2.0.4",
-		"sequelize-cli": "^6.2.0"
+		"sequelize-cli": "^6.2.0",
+		"sqlite3": "^5.0.0",
+		"supertest": "^4.0.2"
 	},
 	"scripts": {
-		"test": "jest",
+		"pretest": "NODE_ENV=test sequelize db:migrate",
+		"test": "NODE_ENV=test jest",
+		"posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
 		"start": "node ./",
 		"dev": "nodemon ./"
 	}
