--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"factory-girl": "^5.0.4",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.27.0",
 		"mysql2": "^2.1.0",
