--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf-autotable": "^3.5.13",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
