--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+	"build": "react-scripts build",
+	"postbuild": "cp -r ./build/* ./backend/src/public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
